--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
 <body>
 <header>
-          <nav>
-                    <div class="navbar bg-error bg-base-100 pb-10 pt-8">
+          <nav class="mx-56">
+                    <div class="navbar bg-error bg-base-90 pb-10 pt-8 rounded-full mt-5">
                               <div class="navbar-start">
                                 <!-- <div class="dropdown"> -->
                                   <label tabindex="0" class="btn btn-ghost btn-circle">
                                     <!-- <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg> -->
                                   </label>
                                   <div class="flex">
-                                  <ul tabindex="0" class="flex mt-3 p-2 shadow bg-base-100  w-80">
+                                  <ul tabindex="0" class="flex mt-3 p-2 text-white w-96">
                                     <li class="pr-5"><a>Home</a></li>
                                     <li class="pr-5"><a>About Us</a></li>
                                     <li class="pr-5"><a>Shop</a></li>
@@ -31,18 +31,19 @@
                                   </div>
                                 <!-- </div> -->
                               </div>
-                              <div class="navbar-center">
-                                <a class="btn btn-ghost normal-case text-xl w-auto">Fruit Burst</a>
+                              <div class="navbar-center text-4xl">
+                                <img src="images/logo.png" alt="">
+                                <a class="btn btn-ghost uppercase text-4xl text-white w-auto">Fruit Burst</a>
                               </div>
                               <div class="navbar-end">
-                                <button class="btn btn-ghost btn-circle">
+                                <button class="btn btn-ghost btn-circle w-96 pl-1 space-x-1 bg-white"><span class="mr-56 normal-case">Search here</span>
                                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                                 </button>
-                                <button class="btn btn-ghost btn-circle">
-                                  <div class="indicator">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
-                                    <span class="badge badge-xs badge-primary indicator-item"></span>
-                                  </div>
+                                <button class="btn sreach btn-ghost btn-circle">
+                                  <!-- <div class="indicator"> -->
+                                    <!-- <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg> -->
+                                    <!-- <span class="badge badge-xs badge-primary indicator-item"></span> -->
+                                  <!-- </div> -->
                                 </button>
                               </div>
                             </div>
