--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 </head>
 
 <body>
+  
 <header>
+                                <!-- nav bar container -->
+
           <nav class="mx-56">
                     <div class="navbar bg-error bg-base-90 pb-10 pt-8 rounded-full mt-5">
                               <div class="navbar-start">
@@ -23,20 +26,20 @@
                                   </label>
                                   <div class="flex">
                                   <ul tabindex="0" class="flex mt-3 p-2 text-white w-96">
-                                    <li class="pr-5"><a>Home</a></li>
-                                    <li class="pr-5"><a>About Us</a></li>
-                                    <li class="pr-5"><a>Shop</a></li>
-                                    <li><a>All Fruits</a></li>
+                                    <li class="px-2 mr-2 hover:bg-primary-content hover:text-violet-800"><a>Home</a></li>
+                                    <li class="px-2 mr-2 hover:bg-primary-content hover:text-violet-800"><a>About Us</a></li>
+                                    <li class="px-2 mr-2 hover:bg-primary-content hover:text-violet-800"><a>Shop</a></li>
+                                    <li class="px-2 hover:bg-primary-content hover:text-violet-800"><a>All Fruits</a></li>
                                   </ul>
                                   </div>
                                 <!-- </div> -->
                               </div>
                               <div class="navbar-center text-4xl">
                                 <img src="images/logo.png" alt="">
-                                <a class="btn btn-ghost uppercase text-4xl text-white w-auto">Fruit Burst</a>
+                                <h1 class="uppercase text-4xl text-white w-auto mr-28">Fruit Burst</h1>
                               </div>
                               <div class="navbar-end">
-                                <button class="btn btn-ghost btn-circle w-96 pl-1 space-x-1 bg-white"><span class="mr-56 normal-case">Search here</span>
+                                <button class="btn btn-ghost btn-circle w-96 pl-1 space-x-1 bg-white hover:bg-primary-content hover:text-violet-800"><span class="mr-56 normal-case">Search here</span>
                                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                                 </button>
                                 <button class="btn sreach btn-ghost btn-circle">
@@ -48,6 +51,38 @@
                               </div>
                             </div>
           </nav>
+
+                              <!-- slider or carousel container -->
+                              <div class="carousel w-9/12 bg-base-50 mr-3.5 mt-5">
+                                <div id="slide1" class="carousel-item relative w-full">
+                                  <img src="/images/banner1.png" class="w-full" />
+                                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                    <a href="#slide4" class="btn btn-circle">❮</a> 
+                                    <a href="#slide2" class="btn btn-circle">❯</a>
+                                  </div>
+                                </div> 
+                                <div id="slide2" class="carousel-item relative w-full">
+                                  <img src="/images/banner2.png" class="w-full" />
+                                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                    <a href="#slide1" class="btn btn-circle">❮</a> 
+                                    <a href="#slide3" class="btn btn-circle">❯</a>
+                                  </div>
+                                </div> 
+                                <div id="slide3" class="carousel-item relative w-full">
+                                  <img src="/images/banner3.png" class="w-full" />
+                                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                    <a href="#slide2" class="btn btn-circle">❮</a> 
+                                    <a href="#slide4" class="btn btn-circle">❯</a>
+                                  </div>
+                                </div> 
+                                <div id="slide4" class="carousel-item relative w-full">
+                                  <img src="/images/banner4.png" class="w-full" />
+                                  <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                                    <a href="#slide3" class="btn btn-circle">❮</a> 
+                                    <a href="#slide1" class="btn btn-circle">❯</a>
+                                  </div>
+                                </div>
+                              </div>
 </header>
 
 
