--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </nav>
 
                               <!-- slider or carousel container -->
-                              <div class="carousel w-9/12 bg-base-50 mr-3.5 mt-5">
+                              <div class="carousel w-9/12 bg-base-50 mx-60 mt-5 items-center">
                                 <div id="slide1" class="carousel-item relative w-full">
                                   <img src="/images/banner1.png" class="w-full" />
                                   <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
