--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
                             <!-- card section -->
 
-          <section class="flex h-[400px] justify-center space-x-4">
+          <section class="flex h-[500px] justify-center space-x-4">
 
                 <div>
                                     <!-- card 1 -->
@@ -608,6 +608,26 @@
           </div>
      </div>
                                      <!-- end of card 4 -->
+                                     
+          </section>
+
+          <section class="h-28">
+            <div class="mt-14 ml-[905px]">
+              <button class="w-24 h-10 bg-red-500 text-white border-[1px] hover:bg-violet-800">Shop All</button>
+            </div>
+          </section>
+
+          <section>
+            <div class="hero min-h-screen" style="background-image: url(./images/banner1.png);">
+              <div class="hero-overlay bg-opacity-60"></div>
+              <div class="hero-content text-center text-neutral-content">
+                <div class="max-w-md">
+                  <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+                  <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                  <button class="btn btn-primary">Get Started</button>
+                </div>
+              </div>
+            </div>
           </section>
           
 </main>
