--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" type="x-icon" href="images/logo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fruit Paradise</title>
 
@@ -21,40 +22,32 @@
     <nav class="ml-[194px] w-[1500px]">
       <div class="navbar bg-error bg-base-90 pb-10 pt-8 rounded-full mt-5">
         <div class="navbar-start">
-          <!-- <div class="dropdown"> -->
-          <label tabindex="0" class="btn btn-ghost btn-circle">
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg> -->
-          </label>
-          <div class="flex">
+          
+          <div class="flex ml-6">
             <ul tabindex="0" class="flex mt-3 p-2 text-white w-96">
-              <li class="px-2 mr-2 rounded-2xl hover:bg-white hover:text-violet-800"><a>Home</a></li>
-              <li class="px-2 mr-2 rounded-2xl hover:bg-white hover:text-violet-800"><a>About Us</a></li>
-              <li class="px-2 mr-2 rounded-2xl hover:bg-white hover:text-violet-800"><a>Shop</a></li>
-              <li class="px-2 rounded-2xl hover:bg-white hover:text-violet-800"><a>All Fruits</a></li>
+              <li class="px-2 mr-2 rounded-2xl hover:bg-violet-800 hover:text-white"><a>Home</a></li>
+              <li class="px-2 mr-2 rounded-2xl hover:bg-violet-800 hover:text-white"><a>About Us</a></li>
+              <li class="px-2 mr-2 rounded-2xl hover:bg-violet-800 hover:text-white"><a>Shop</a></li>
+              <li class="px-2 rounded-2xl hover:bg-violet-800 hover:text-white"><a>All Fruits</a></li>
             </ul>
           </div>
           <!-- </div> -->
         </div>
         <div class="navbar-center text-4xl">
           <img src="images/logo.png" alt="">
-          <h1 class="uppercase text-4xl text-white w-auto mr-28 shadow-black">Fruit Burst</h1>
+          <h1 class="uppercase text-4xl font-bold text-white w-auto mr-28 shadow-black">Fruit Paradise</h1>
         </div>
         <div class="navbar-end">
           <button
-            class="btn btn-ghost btn-circle w-96 pl-1 space-x-1 bg-white hover:bg-primary-content hover:text-violet-800"><span
-              class="mr-56 normal-case text-gray-600">Search here</span>
+            class="mr-10 btn btn-ghost btn-circle w-96 pl-1 space-x-1 bg-white hover:bg-slate-100 hover:text-violet-800"><span
+              class="mr-56 normal-case text-gray-600">Search here..</span>
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
               stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
             </svg>
           </button>
-          <button class="btn sreach btn-ghost btn-circle">
-            <!-- <div class="indicator"> -->
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg> -->
-            <!-- <span class="badge badge-xs badge-primary indicator-item"></span> -->
-            <!-- </div> -->
-          </button>
+          
         </div>
       </div>
     </nav>
@@ -72,10 +65,10 @@
               <h2
                 class="ml-[370px] text-6xl text-center shadow-black font-bold text-slate-50 my-auto w-[700px] h-36 mt-20">
                 Exotic Tastes At Your Doorstep</h2>
-              <p class="mr-[10px] mt-4 text-sm shadow-black text-center text-white my-[10px]">We supply highly quality
+              <p class="ml-[35px] mt-4 text-sm shadow-black text-center text-white my-[10px]">We supply highly quality
                 organic products.</p>
               <button
-                class="bg-[#F85559] border-[1px] border-gray-300  hover:bg-yellow-50 hover:text-violet-800 shadow-black font-bold w-24 py-2 px-1 rounded-lg text-white ml-[675px] mb-[450px]">Shop
+                class="bg-[#F85559] border-[1px] border-gray-300  hover:bg-violet-800 hover:text-white shadow-black font-bold w-24 py-2 px-1 rounded-lg text-white ml-[675px] mb-[450px]">Shop
                 Now</button>
 
               <!-- bonus section -->
@@ -127,10 +120,10 @@
               <h2
                 class="ml-[370px] text-6xl text-center shadow-black font-bold text-slate-50 my-auto w-[700px] h-36 mt-20">
                 Exotic Tastes At Your Doorstep</h2>
-              <p class="mr-[10px] mt-4 text-sm shadow-black text-center text-white my-[15px]">We supply highly quality
+              <p class="ml-[35px] mt-4 text-sm shadow-black text-center text-white my-[15px]">We supply highly quality
                 organic products.</p>
               <button
-                class="bg-[#F85559] border-[1px] border-gray-300 hover:bg-yellow-50 hover:text-violet-800 shadow-black font-bold w-24 py-2 px-1 rounded-lg text-white ml-[675px] mb-[450px]">Shop
+                class="bg-[#F85559] border-[1px] border-gray-300 hover:bg-violet-800 hover:text-white shadow-black font-bold w-24 py-2 px-1 rounded-lg text-white ml-[675px] mb-[450px]">Shop
                 Now</button>
 
               <!-- bonus section -->
@@ -183,10 +176,10 @@
               <h2
                 class="ml-[370px] text-6xl text-center shadow-black font-bold text-slate-50 my-auto w-[700px] h-36 mt-20">
                 Exotic Tastes At Your Doorstep</h2>
-              <p class="mr-[10px] mt-4 text-sm shadow-black text-center text-white my-[10px]">We supply highly quality
+              <p class="ml-[35px] mt-4 text-sm shadow-black text-center text-white my-[10px]">We supply highly quality
                 organic products.</p>
               <button
-                class="bg-[#F85559] border-[1px] border-gray-300 hover:bg-yellow-50 hover:text-violet-800 shadow-black font-bold w-24 py-2 px-1 rounded-lg text-white ml-[675px] mb-[450px]">Shop
+                class="bg-[#F85559] border-[1px] border-gray-300 hover:bg-violet-800 hover:text-white shadow-black font-bold w-24 py-2 px-1 rounded-lg text-white ml-[675px] mb-[450px]">Shop
                 Now</button>
 
               <!-- bonus section -->
@@ -239,14 +232,14 @@
               <h2
                 class="ml-[370px] text-6xl text-center shadow-black font-bold text-slate-50 my-auto w-[700px] h-36 mt-20">
                 Exotic Tastes At Your Doorstep</h2>
-              <p class="mr-[10px] mt-4 text-sm shadow-black text-center text-white my-[10px]">We supply highly quality
+              <p class="ml-[35px] mt-4 text-sm shadow-black text-center text-white my-[10px]">We supply highly quality
                 organic products.</p>
               <button
-                class="bg-[#F85559] border-[1px] border-gray-300 hover:bg-yellow-50 hover:text-violet-800 shadow-black font-bold w-24 py-2 px-1 rounded-lg text-white ml-[675px] mb-[450px]">Shop
+                class="bg-[#F85559] border-[1px] border-gray-300 hover:bg-violet-800 hover:text-white shadow-black font-bold w-24 py-2 px-1 rounded-lg text-white ml-[675px] mb-[450px]">Shop
                 Now</button>
 
               <!-- bonus section -->
-              <div class="absolute shadow-2xl bg-white mt-[500px] flex-col h-52 w-[1200px] ml-[120px] flex">
+              <div class="absolute shadow-md bg-white mt-[500px] flex-col h-52 w-[1200px] ml-[120px] flex">
                 <div class="flex mx-44 space-x-14 my-10">
                   <div class="flex-col">
                     <img class="w-[130px]" src="images/fruit1.png" alt="Strawberry">
@@ -778,7 +771,7 @@
     <div>
       <div class="flex ml-[80px]">
         <img src="images/logo.png" alt="">
-        <h1 class="uppercase text-4xl text-white w-auto mt-[11px] mr-28 shadow-black">Fruit Burst</h1>
+        <h1 class="uppercase text-4xl font-bold text-white w-auto mt-[11px] mr-28 shadow-black">Fruit Paradise</h1>
       </div>
       <div class="flex justify-around mr-[2px]">
       <button class="w-14 bg-black text-white hover:bg-violet-800">Privacy</button>
