--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 Now</button>
 
               <!-- bonus section -->
-              <div class="absolute shadow-md bg-white mt-[500px] flex-col h-52 w-[1200px] ml-[120px] flex">
+              <div class="absolute shadow-md bg-white mt-[500px] flex-col h-52 w-[1200px] ml-[100px] flex">
                 <div class="flex mx-44 space-x-14 my-10">
                   <div class="flex-col">
                     <img class="w-[130px]" src="images/fruit1.png" alt="Strawberry">
@@ -127,7 +127,7 @@
                 Now</button>
 
               <!-- bonus section -->
-              <div class="absolute shadow-md bg-white mt-[500px] flex-col h-52 w-[1200px] ml-[120px] flex">
+              <div class="absolute shadow-md bg-white mt-[500px] flex-col h-52 w-[1200px] ml-[100px] flex">
                 <div class="flex mx-44 space-x-14 my-10">
                   <div class="flex-col">
                     <img class="w-[130px]" src="images/fruit1.png" alt="Strawberry">
@@ -183,7 +183,7 @@
                 Now</button>
 
               <!-- bonus section -->
-              <div class="absolute shadow-md bg-white mt-[500px] flex-col h-52 w-[1200px] ml-[120px] flex">
+              <div class="absolute shadow-md bg-white mt-[500px] flex-col h-52 w-[1200px] ml-[100px] flex">
                 <div class="flex mx-44 space-x-14 my-10">
                   <div class="flex-col">
                     <img class="w-[130px]" src="images/fruit1.png" alt="Strawberry">
@@ -239,7 +239,7 @@
                 Now</button>
 
               <!-- bonus section -->
-              <div class="absolute shadow-md bg-white mt-[500px] flex-col h-52 w-[1200px] ml-[120px] flex">
+              <div class="absolute shadow-md bg-white mt-[500px] flex-col h-52 w-[1200px] ml-[100px] flex">
                 <div class="flex mx-44 space-x-14 my-10">
                   <div class="flex-col">
                     <img class="w-[130px]" src="images/fruit1.png" alt="Strawberry">
@@ -765,9 +765,51 @@
         </div>
     </section>
 
+                               <!-- choose us section  -->
+          <section>
+            <div>
+                      <div class="w-[1350px] h-[700px] ml-[280px] justify-center">
+                        <h1 class="mb-5 ml-[500px] text-5xl font-bold">Why Choose Us</h1>
+                        <p class="w-[600px] ml-[370px] text-center">Contrary to popular belief, is not simply random text.
+                          It has roots in a piece of classical Latin literature from 45 BC,
+                          making it over 2000 years old.</p>
+                          
+                        <div class="flex justify-around border-[1px] bg-red-50">
+                          <div>
+                          <ul class="steps steps-vertical mt-20 mb-20">
+                            <li class="step step-error">
+                              <h2 class="text-2xl font-bold text-left">Dedicated Team.. <br> <Span class="text-sm font-light">Professional employees are there for you to pick fresh fruits.</Span></h2>
+                            </li>
+                            <li class="step step-error">
+                              <h2 class="text-2xl font-bold text-left">Fresh is Best.. <br> <Span class="text-sm font-light">All fruits are fresh and A-Grade qualitiful.</Span></h2>
+                            </li>
+                            <li class="step step-error">
+                              <h2 class="text-2xl font-bold text-left">Gift Certificates.. <br> <Span class="text-sm font-light">Our regular customers get attractive gifts.</Span></h2>
+                            </li>
+                            <li class="step step-error">
+                              <h2 class="text-2xl font-bold text-left">Integrated Supplier.. <br> <Span class="text-sm font-light">Our employees are very active.</Span></h2>
+                            </li>
+                            <li class="step step-error">
+                              <h2 class="text-2xl font-bold text-left">Sustainable Practice.. <br> <Span class="text-sm font-light">Everything is well decorated.</Span></h2>
+                            </li>
+                            <li class="step step-error">
+                              <h2 class="text-2xl font-bold text-left">The Benefits Only.. <br> <Span class="text-sm font-light">If you trust us then you will be must the happier customer.</Span></h2>
+                            </li>
+                            </ul>
+                          </div>
+
+                          <div class="mt-[65px] mb-[65]">
+                            <img class="w-[600px] h-[400px]" src="images/whychoose1.png" alt="">
+                          </div>
+
+                        </div>
+                    </div>
+               </div>
+          </section>
+
   </main>
   <!-- footer section -->
-  <footer class="footer w-[1350px] ml-[285px] footer-center p-10 bg-black text-white">
+  <footer class="footer w-[1360px] ml-[278px] footer-center p-10 bg-black text-white">
     <div>
       <div class="flex ml-[80px]">
         <img src="images/logo.png" alt="">
