--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         <!-- card 1 -->
         <div class="mt-10 border-[1px] card w-80 h-[460px] bg-base-100 shadow-xl">
           <figure class="px-10 pt-10">
-            <img class="w-full" src="/images/fruit6.png" alt="">
+            <img src="/images/fruit6.png" alt="">
           </figure>
           <div class="card-body items-center text-center">
             <h2 class="card-title">12.90$ - 18.85$</h2>
